changed over to a different api because the eventbrite api is depricated

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 </div>
 
 <footer class="mt-5 p-3 text-center bg-primary">
-    Search Events in Your City &copy;
+    Search Events in Your City 
 </footer>
 
-<script type="module" src ="/eventbrite.js"></script>
+<script type="module" src ="/ticketmaster.js"></script>
 <script type = "module" src ="/ui.js"></script>
 <script type = "module" src ="/app.js"></script>
 <style>
