--- a/index.html
+++ b/index.html
@@ -7,42 +7,15 @@
 </head>
 <body>
     
-<h1 class="text-center">EventLinx</h1>
-
-<div class="form-group">
-    <label for="event-name">Event Name</label>
-    <input type="text" id="event-name" class="form-control"
-    placeholder="Search By Event Name">
+<div class="container">
+    <h1>Find Events Near You</h1>
+    <input type="text" id="event-name" placeholder="Event Name">
+    <button id="searchBtn">Search</button><br><br>
+    <input type="text" id="city" placeholder="City">
+    <button id="searchBtn">Search</button>
+    <div id=" results"></div>
 </div>
-
-<div class="form-group">
-    <label for="event-city">Enter City</label>
-    <input type="text" id="event-name" class="form-control"
-    placeholder="Search By Event City">
-</div>
-
-<div class="form-group">
-    <label for="category">Select Category</label>
-    <select id="category" class="form-control" ></select>
-</div>
-
-<div class="form-group">
-    <input type="submit" class="mt-5 form-control btn btn-success"
-    id="submitBtn" value="Search">
-</div>
-
-<div>
-    <div id="result" class="row mt-5"></div>
-</div>
-
-<footer class="mt-5 p-3 text-center bg-primary">
-    Search Events in Your City 
-</footer>
-
-<script type="module" src ="/ticketmaster.js"></script>
-<script type = "module" src ="/ui.js"></script>
-<script type = "module" src ="/app.js"></script>
-<style>
+<script type="module" src="./main.js"></script>
 
 </style>
 
