--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Finder</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+    <div class="wrapper">
+        <img src="images/app logo.png" alt="">
     <div class="container">
-        <h1>Find Events Near You</h1>
+        <h1 style="color: rgb(255, 27, 27);">EVENTHUB</h1>
+        <br>
+        <h2>Find Events Near You</h2>
 
         <!-- Search by City and Category -->
         <div class="search-panel">
@@ -21,10 +26,11 @@
             </div>
             
         </div>
+    </div>
 
         <!-- Events List -->
         <div id="events">
-            <h2>Upcoming Events:</h2>
+        
             <!-- Event items will be appended here dynamically -->
         </div>
     </div>
