html boiler plate connected css and js

--- a/index.html
+++ b/index.html
@@ -3,37 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event Finder</title>
+    <title>Event API Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-    <div class="wrapper">
-        <img src="images/app logo.png" alt="">
-    <div class="container">
-        <h1 style="color: rgb(255, 27, 27);">EVENTHUB</h1>
-        <br>
-        <h2>Find Events Near You</h2>
-
-        <!-- Search by City and Category -->
-        <div class="search-panel">
-            <div>
-                <input type="text" id="city" placeholder="City">
-                <select id="classification">
-                    <!-- Classification options will be populated here -->
-                </select>
-                <button id="searchBtn">Search</button>
-            </div>
-            
-        </div>
-    </div>
-
-        <!-- Events List -->
-        <div id="events">
-        
-            <!-- Event items will be appended here dynamically -->
-        </div>
-    </div>
+    <h1>My Event API Project</h1>
 
     <script src="script.js"></script>
 </body>
