created search and button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My Event API Project</h1>
+    <nav>
+        <div>
+            <a href="index.html">EVENTHUB</a>
+            <div class="search-container">
+                <input type="text" placeholder="Search events" id="search-input">
+                <button id="search-button">Search</button>
+                
+            </div>
+        </div>
+    </nav>
 
     <script src="script.js"></script>
 </body>
