added styling to search bar and changed logo

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <nav>
-        <div>
-            <a href="index.html">EVENTHUB</a>
+        <div class="navbar">
+            <a class="logo"index.html><b>EVENTHUB</a>
             <div class="search-container">
                 <input type="text" placeholder="Search events" id="search-input">
                 <button id="search-button">Search</button>
